<resources>
    <string name="app_name" translatable="false">VanRent</string>
    <string name="currency_per_hour">%1$d Ft / hour</string>
    <string name="time_interval" translatable="false">%1$d:00-%2$d:00</string>
    <string name="wrong_start_time">Start time cannot be earlier than %1$d:00.</string>
    <string name="wrong_end_time">End time cannot be later than %1$d:00.</string>
    <string name="wrong_times">Start time must be earlier than end time.</string>
    <string name="no_time_slots">There are no available time slots for this date and vehicle combination.</string>
    <string name="successful_reservation">Reservation successful.</string>
    <string name="card_payment_unavailable">Credit card payment is temporarily unavailable.</string>
    <string name="full_name">Full name</string>
    <string name="example_full_name">e.g. John Smith</string>
    <string name="city">City</string>
    <string name="example_city">e.g. London</string>
    <string name="address">Address</string>
    <string name="example_address">e.g. Baker Street 221B</string>
    <string name="email" translatable="false">Email</string>
    <string name="example_email">e.g. johnsmith@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="example_phone">e.g. +36701234567</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit card</string>
    <string name="rent">Rent</string>
    <string name="reserve">Reserve</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="set_time">Set time</string>
    <string name="enter_email">Please enter your email address.</string>
    <string name="enter_name">Please enter your full name.</string>
    <string name="enter_city">Please enter your city.</string>
    <string name="enter_address">Please enter your address.</string>
    <string name="enter_phone">Please enter your phone number.</string>
    <string name="choose_payment">Please choose a payment method.</string>
    <string name="furniture_van">Great for moving furniture.</string>
    <string name="small_box_van">Great for moving smaller boxes.</string>

</resources>