<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsActivity"
    android:padding="16dp"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideInset">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />
        <EditText
            android:id="@+id/etCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_full_name"
            android:padding="12dp"
            android:layout_marginBottom="28dp"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/tvCustomerCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />
        <EditText
            android:id="@+id/etCustomerCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_city"
            android:padding="12dp"
            android:layout_marginBottom="28dp"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvCustomerAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <EditText
            android:id="@+id/etCustomerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_address"
            android:padding="12dp"
            android:layout_marginBottom="28dp"
            android:inputType="textPostalAddress"/>

        <TextView
            android:id="@+id/tvCustomerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/etCustomerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_email"
            android:padding="12dp"
            android:layout_marginBottom="28dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/tvCustomerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/etCustomerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_phone"
            android:padding="12dp"
            android:layout_marginBottom="28dp"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/tvPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"/>
        <RadioGroup
        android:id="@+id/rgPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbCashPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/rbCreditCardPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card" />

        </RadioGroup>

        <Button
            android:id="@+id/btnReserve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>